# localshell

./: README.md  pyproject.toml
localshell/: awscli.py  data.py  main.py
localshell/models/cloudshell/1970-01-01/: service-2.json
